make nvidia-detect aware of the backported driver
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/295@2754 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ nvidia-graphics-drivers (295.09-1) UNRELEASED; urgency=low
   * Update symbols control files.
   * Update nv-readme.ids.
   * Update lintian overrides.
+  * nvidia-detect: Add IDs for the 275.xx package in squeeze-backports and
+    suggest the backported package for newer GPUs that don't work in squeeze.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 02 Jan 2012 18:59:52 +0100
 
