--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (295.17-1) UNRELEASED; urgency=low
     - Fixed a bug that prevented the internal panel from working on some
       laptops with GeForce 7 series GPUs.
     * Added support for xserver 1.11.99.901 (also known as 1.12 RC1).
+  * Add xorg-video-abi-12 as alternative dependency and bump xserver-xorg-core
+    dependency accordingly.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 03 Feb 2012 20:26:21 +0100
 
