--- a/debian/changelog
+++ b/debian/changelog
@@ -193,6 +193,12 @@ nvidia-graphics-drivers (280.13.really.275.36-1) unstable; urgency=low
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 04 Nov 2011 21:10:22 +0100
 
+nvidia-graphics-drivers (280.13.really.275.28-2) UNRELEASED; urgency=low
+
+  * Dummy.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 04 Nov 2011 21:10:21 +0100
+
 nvidia-graphics-drivers (280.13.really.275.28-1) unstable; urgency=low
 
   [ Andreas Beckmann ]
