--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,14 @@
-nvidia-graphics-drivers (295.17-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
 
+  * New upstream release 295.20 (2012-02-13).
+    - Fixed a bug that caused black areas to appear on the back faces of
+      some models in Maya.
+    - Fixed a bug that resulted in the printing of spurious loader error
+      messages.
+    - Fixed a bug that could cause X to crash after hotplugging displays.
+    - Fixed a bug which caused face selections to be misrendered in
+      Maya when using the paint selection tool.
+    - Improved performance for interactive tools in Mudbox.
   * New upstream beta 295.17 (2012-01-31).
     - Fixed a bug that prevented the internal panel from working on some
       laptops with GeForce 7 series GPUs.
@@ -8,7 +17,7 @@ nvidia-graphics-drivers (295.17-1) UNRELEASED; urgency=low
     dependency accordingly.
   * Bump debhelper dependency to 9.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Fri, 03 Feb 2012 20:26:21 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 14:26:12 +0100
 
 nvidia-graphics-drivers (295.09-1) experimental; urgency=low
 
