--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
 
-  * New upstream release 295.20 (2012-02-13).
+  * New upstream release 295.20 (2012-02-13).  (Closes: #659855)
     - Fixed a bug that caused black areas to appear on the back faces of
       some models in Maya.
     - Fixed a bug that resulted in the printing of spurious loader error
@@ -10,6 +10,8 @@ nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
       Maya when using the paint selection tool.
     - Improved performance for interactive tools in Mudbox.
   * New upstream beta 295.17 (2012-01-31).
+    - Fixed a bug that could cause some OpenGL applications (including
+      desktop environments like KDE and GNOME Shell) to hang.
     - Fixed a bug that prevented the internal panel from working on some
       laptops with GeForce 7 series GPUs.
     * Added support for xserver 1.11.99.901 (also known as 1.12 RC1).
