--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
       laptops with GeForce 7 series GPUs.
     * Added support for xserver 1.11.99.901 (also known as 1.12 RC1).
   * Bump debhelper dependency to 9.
+  * Redirect bug reports against module binary packages to
+    nvidia-kernel-source.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 14:26:12 +0100
 
