nvidia-detect: support querying a pci id given on the command line instead of autodetecting a gpu
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2797 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
   * Bump debhelper dependency to 9.
   * Redirect bug reports against module binary packages to
     nvidia-kernel-source.
+  * nvidia-đetect: Support querying a PCI ID given on the command line instead
+    of autodetecting an installed NVIDIA GPU.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 14:26:12 +0100
 
