add some notes about the 'EQ overflowing...' error to the README
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2799 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
     nvidia-kernel-source.
   * nvidia-đetect: Support querying a PCI ID given on the command line instead
     of autodetecting an installed NVIDIA GPU.
+  * Add some notes about the 'EQ overflowing...' error to the README.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 14:26:12 +0100
 
