--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (295.20-1) unstable; urgency=low
 
   * New upstream release 295.20 (2012-02-13).  (Closes: #659855)
     - Fixed a bug that caused black areas to appear on the back faces of
@@ -23,7 +23,7 @@ nvidia-graphics-drivers (295.20-1) UNRELEASED; urgency=low
     of autodetecting an installed NVIDIA GPU.
   * Add some notes about the 'EQ overflowing...' error to the README.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 14:26:12 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 21:35:57 +0100
 
 nvidia-graphics-drivers (295.09-1) experimental; urgency=low
 
