--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (295.20-1) unstable; urgency=low
     - Fixed a bug that prevented the internal panel from working on some
       laptops with GeForce 7 series GPUs.
     * Added support for xserver 1.11.99.901 (also known as 1.12 RC1).
+  * Upload to unstable.
   * Bump debhelper dependency to 9.
   * debian/rules: Switch to dh --with dkms.
   * Redirect bug reports against module binary packages to
