prepare upload to experimental
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/295@2818 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (295.20-1+exp1) unstable; urgency=low
+
+  * Upload to experimental.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 22:34:38 +0100
+
 nvidia-graphics-drivers (295.20-1) unstable; urgency=low
 
   * New upstream release 295.20 (2012-02-13).  (Closes: #659855)
