--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nvidia-graphics-drivers (295.20-1+exp1) unstable; urgency=low
 
   * Upload to experimental.
+  * Add xorg-video-abi-12 as alternative dependency and bump xserver-xorg-core
+    dependency accordingly.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 22:34:38 +0100
 
