finalize changelog for nvidia-graphics-drivers (295.20-1+exp1), upload to experimental
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/295@2820 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (295.20-1+exp1) unstable; urgency=low
+nvidia-graphics-drivers (295.20-1+exp1) experimental; urgency=low
 
   * Upload to experimental.
   * Add xorg-video-abi-12 as alternative dependency and bump xserver-xorg-core
-    dependency accordingly.
+    dependency accordingly to be usable with Xorg Xserver 1.12 RC1.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 22:34:38 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Feb 2012 22:46:48 +0100
 
 nvidia-graphics-drivers (295.20-1) unstable; urgency=low
 
