--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
+nvidia-graphics-drivers (295.20-2) UNRELEASED; urgency=low
+
+  * Add missing upstream changelog entries.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 16 Feb 2012 11:38:23 +0100
+
 nvidia-graphics-drivers (295.20-1) unstable; urgency=low
 
-  * New upstream release 295.20 (2012-02-13).  (Closes: #659855)
+  * New upstream long-lived branch release 295.20 (2012-02-13).
+    (Closes: #659855)
     - Fixed a bug that caused black areas to appear on the back faces of
       some models in Maya.
     - Fixed a bug that resulted in the printing of spurious loader error
@@ -14,7 +21,13 @@ nvidia-graphics-drivers (295.20-1) unstable; urgency=low
       desktop environments like KDE and GNOME Shell) to hang.
     - Fixed a bug that prevented the internal panel from working on some
       laptops with GeForce 7 series GPUs.
-    * Added support for xserver 1.11.99.901 (also known as 1.12 RC1).
+  * New upstream release 275 series.
+    - Added support for the following GPU: NVS 5200M
+    - Added support for deleting SDI audio ancillary data packets when a video
+      frame is dropped on a Quadro SDI Output device.  See the
+      NV_CTRL_GVO_ANC_BLANKING attribute in NVCtrl.h for details.  This option
+      can be set via the "GvoAudioBlanking" attribute in nvidia-settings.
+    - Added support for xserver 1.11.99.901 (also known as 1.12 RC1).
   * Upload to unstable.
   * Bump debhelper dependency to 9.
   * debian/rules: Switch to dh --with dkms.
@@ -47,6 +60,12 @@ nvidia-graphics-drivers (295.09-1) experimental; urgency=low
     - Implemented support for constraining cursors to the visible regions of
       connected displays; see the "ConstrainCursor" X Option in the README for
       details.
+  * New upstream long-lived branch release 275.43 (2011-12-14).
+    - Fixed a bug that would cause Firefox to abort on pages with Flash when
+      layers acceleration was force-enabled on Linux and Solaris.
+    - Fixed a bug that caused a crash when glDrawArrays was used with a non-VBO
+      vertex attribute array to draw on a Xinerama screen other than screen 0
+      using an indirect GLX context.
   * Upload to experimental.
   * Refresh use-nv-kernel.o.ARCH.patch.
   * Update symbols control files.
@@ -82,6 +101,10 @@ nvidia-graphics-drivers (290.10-1) unstable; urgency=low
     - Fixed a regression that caused blank/white windows when exhausting video
       memory on GeForce 6 and 7 series GPUs while using composited
       desktops.  (Closes: #646975)
+  * New upstream release 275 series.
+    - Fixed a bug that caused a crash when glDrawArrays was used with a non-VBO
+      vertex attribute array to draw on a Xinerama screen other than screen 0
+      using an indirect GLX context.
   * Upload to unstable.
   * Update lintian overrides.
   * debian/copyright: Update to dep5.mdwn?revision=202.
