--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ nvidia-graphics-drivers (295.33-1) UNRELEASED; urgency=low
   * Add xorg-video-abi-12 as alternative dependency and bump xserver-xorg-core
     dependency accordingly to be usable with Xorg Xserver 1.12 RC1.
   * Use the final copyright-format/1.0 URL.
+  * Reorder debian/copyright and use the Comment: field for extra information.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 16 Feb 2012 11:38:23 +0100
 
