--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ nvidia-graphics-drivers (295.33-1) unstable; urgency=low
   * Update symbols control files.
   * Add xorg-video-abi-12 as alternative dependency and bump xserver-xorg-core
     dependency accordingly to be usable with Xorg Xserver 1.12 RC1.
+  * Update to Standards-Version: 3.9.3.
   * Use the final copyright-format/1.0 URL.
   * Reorder debian/copyright and use the Comment: field for extra information.
 
