add patch from Arch Linux to enable building for RT kernel
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2879 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (295.33-2) UNRELEASED; urgency=low
+
+  * New patch patch-3.0-rt-nvidia.patch taken from Arch Linux: enable building
+    the kernel module for RT kernels.  (Closes: #641654)
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 04 Apr 2012 11:38:55 +0200
+
 nvidia-graphics-drivers (295.33-1) unstable; urgency=low
 
   * New upstream long-lived branch release 295.33 (2012-03-22).
