--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nvidia-graphics-drivers (295.33-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (295.33-2) unstable; urgency=low
 
-  * New patch patch-3.0-rt-nvidia.patch taken from Arch Linux: enable building
-    the kernel module for RT kernels.  (Closes: #641654)
+  * New patch patch-3.0-rt-nvidia.patch taken from Arch Linux: support
+    building the kernel module for RT kernels.  (Closes: #641654)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Wed, 04 Apr 2012 11:38:55 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 04 Apr 2012 13:24:26 +0200
 
 nvidia-graphics-drivers (295.33-1) unstable; urgency=low
 
