finalize changelog for nvidia-graphics-drivers (295.40-1), set urgency to medium
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2900 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-nvidia-graphics-drivers (295.40-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (295.40-1) unstable; urgency=medium
 
-  * New upstream release 295.40 (2012-04-11).
+  * New upstream long-lived branch release 295.40 (2012-04-11).
     - Closed a security vulnerability which made it possible for attackers to
       reconfigure GPUs to gain access to arbitrary system memory. For further
       details, see: http://nvidia.custhelp.com/app/answers/detail/a_id/3109
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (295.40-1) UNRELEASED; urgency=low
       "AllowNon3DVisionModes", to allow modes that are not optimized for
       NVIDIA 3D Vision to be validated on 3D Vision monitors.
     - Added support for the following GPUs: GeForce GT 635M, GeForce 610M.
+  * Set urgency to medium for security bugfix.
   * Update nv-readme.ids.
   * Update lintian overrides.
   * conftest.h:
@@ -22,7 +23,7 @@ nvidia-graphics-drivers (295.40-1) UNRELEASED; urgency=low
      has split and removed asm/system.h.  Based on patch from Antonio Ospite.
      (Closes: #667719)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Thu, 12 Apr 2012 19:11:39 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 12 Apr 2012 19:56:08 +0200
 
 nvidia-graphics-drivers (295.33-2) unstable; urgency=low
 
