--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (295.40-2) UNRELEASED; urgency=low
+
+  * nvidia-vdpau-driver: Add Breaks against pre-multiarch libvdpau1.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 21 Apr 2012 13:41:56 +0200
+
 nvidia-graphics-drivers (295.40-1) unstable; urgency=medium
 
   * New upstream long-lived branch release 295.40 (2012-04-11).
