update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2924 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (295.49-1) UNRELEASED; urgency=low
     - Fixed an OpenGL performance regression which affected Geforce 6 and
       Geforce 7 series integrated GPUs.  (Closes: #668854)
   * Update nv-readme.ids.
+  * Update lintian overrides.
   * nvidia-vdpau-driver: Add Breaks against pre-multiarch libvdpau1.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 09 May 2012 09:11:10 +0200
