--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (295.49-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (295.49-1) unstable; urgency=low
 
   * New upstream long-lived branch release 295.49 (2012-05-03).
     - Added support for the following GPU: GeForce GTX 690.
@@ -11,7 +11,7 @@ nvidia-graphics-drivers (295.49-1) UNRELEASED; urgency=low
   * Update lintian overrides.
   * nvidia-vdpau-driver: Add Breaks against pre-multiarch libvdpau1.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Wed, 09 May 2012 09:11:10 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 09 May 2012 10:02:50 +0200
 
 nvidia-graphics-drivers (295.40-1) unstable; urgency=medium
 
