new upstream long-lived branch release 295.53 (2012-05-16)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2981 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+nvidia-graphics-drivers (295.53-1) UNRELEASED; urgency=low
+
+  * New upstream long-lived branch release 295.53 (2012-05-16).
+    - Added support for the following GPUs: GeForce GTX 670, GeForce 605,
+      GeForce GT 610, GeForce GT 630, GeForce GT 640, GeForce GT 645.
+    - Fixed a bug affecting some G-Sync configurations which could cause
+      active stereo content to be inverted on some display devices.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 21 May 2012 17:38:51 +0200
+
 nvidia-graphics-drivers (295.49-1) unstable; urgency=low
 
   * New upstream long-lived branch release 295.49 (2012-05-03).
