sync conftest.sh with 302.11, 295.53, 173.14.34
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2986 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (295.53-1) UNRELEASED; urgency=low
     - Fixed a bug affecting some G-Sync configurations which could cause
       active stereo content to be inverted on some display devices.
   * Update nv-readme.ids.
+  * conftest.h: implement check for asm/system.h (295.53).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 21 May 2012 17:38:51 +0200
 
