--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (295.53-1) UNRELEASED; urgency=low
       active stereo content to be inverted on some display devices.
   * Update nv-readme.ids.
   * conftest.h: implement check for asm/system.h (295.53).
+  * kernel-3.4.patch: remove, fixed upstream.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 21 May 2012 17:38:51 +0200
 
