add lintian overrides for hardening-*
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2988 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (295.53-1) UNRELEASED; urgency=low
   * Update nv-readme.ids.
   * conftest.h: implement check for asm/system.h (295.53).
   * kernel-3.4.patch: remove, fixed upstream.
+  * Add lintian overrides for hardening-*.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 21 May 2012 17:38:51 +0200
 
